Fix broken CSS for Download buttons

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -130,7 +130,7 @@ $content-width: min($max-width, 100% - $padding-size * 2);
 	display: flex;
 	flex-direction: column;
 	gap: 0.4rem;
-	max-width: 16.5px;
+	max-width: 16.5rem;
 }
 
 .download-info {
